edited css stylign to fix bleed

--- a/react-app/src/components/FriendsList/FriendsList.css
+++ b/react-app/src/components/FriendsList/FriendsList.css
@@ -253,7 +253,7 @@
   align-items: center;
 }
 
-.fa-plus {
+.friendslist-channel-dm-container > .fa-plus {
   color: rgb(181,186,193);
   margin-right: 15px;
 }
